Add hero addition

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body ng-controller="HeroController">
     <h1>Hero Manager 5000</h1>
     <div hero-list></div>
+    <div hero-creator add-new-hero="addNewHero"></div>
     <script src="js/heroes/app.js"></script>
   </body>
 </html>
