--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <div hero-list></div>
     <div hero-creator add-new-hero="addNewHero"></div>
     <script src="js/heroes/app.js"></script>
+    <script src="js/heroes/svc.js"></script>
   </body>
 </html>
