--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Hero Manager 5000</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular.min.js"></script>
+    <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/0.9.1/angularfire.min.js"></script>
   </head>
   <body ng-controller="HeroController">
     <h1>Hero Manager 5000</h1>
